// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRadioGroup.ts should match dense snapshot 1`] = `
<div class="v-input v-input--dense theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column">
  <div class="v-input__control">
    <div class="v-input__slot"
         style="height: auto;"
    >
      <div class="v-input--radio-group__input"
           role="radiogroup"
           aria-labelledby="input-5"
      >
        <div class="v-radio theme--light">
          <div class="v-input--selection-controls__input">
            <i class="v-icon--dense v-icon notranslate theme--light mdi mdi-radiobox-blank"
               aria-hidden="true"
            >
            </i>
            <input aria-checked="false"
                   id="input-6"
                   role="radio"
                   type="radio"
                   name="radio-5"
            >
            <div class="v-input--selection-controls__ripple">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VRadioGroup.ts should match snapshot 1`] = `
<div class="v-input theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column">
  <div class="v-input__control">
    <div class="v-input__slot"
         style="height: auto;"
    >
      <div class="v-input--radio-group__input"
           role="radiogroup"
           aria-labelledby="input-1"
      >
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;
